test/should_pass/to_002.grg
actions to_001 using test_model_002;

rule to_1 {
	pattern {
		a : A;
		b : typeof(a);
	}
	replace{
		a --> b;
    c : typeof(a);
    d : typeof(b);
	}
}
