test/should_fail/inh_009.grg
actions inh_009 using inh_model_009;

rule bla { pattern{} replace{} }
